@@ -1,3 +1,7 @@
+2011-01-24  Tobias Liebig  <mail_typo3@etobi.de>
+
+	* Fixed bug #17078: in fileadmin saving changes from t3editor doesn't work
+
 2011-01-24  Francois Suter  <francois.suter@typo3.org>
 
 	* Follow-up to #16848: Added link to buzz.typo3.org article about changes to CSH in FlexForms to NEWS.txt
